# Casetools

./: README.md  report
lab1at/: Makefile  Makefile.am  Makefile.in  README  config.status  configure  configure.ac  manual
lab1at/autom4te.cache/: output.1  requests  traces.0  traces.1
lab1at/src/: Makefile  Makefile.am  Makefile.in  fact  fc.txt  fh.txt
lab1at/src/.deps/: fact.Po
lab1make/: fact.c
lab1make/html/: fact_8c.html  fact_8h_source.html  files.html  index.html
lab1make/html/search/: files_0.js  searchdata.js
lab1make/test/: Doxyfile  Makefile  fact  fact.h
lab1make/test/html/: fact_8h.html  menudata.js
lab1make/test/latex/: fact_8c.tex  fact_8h.tex  files.tex  refman.tex
lab2/: гантт.gan
